intercommunication order-inventory