@@ -2,6 +2,8 @@ package store.orderservice.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.web.reactive.function.client.WebClient;
+import store.orderservice.dto.InventoryResponse;
 import store.orderservice.dto.OrderLineItemsDto;
 import store.orderservice.dto.OrderRequest;
 import store.orderservice.model.Order;
@@ -9,9 +11,10 @@ import store.orderservice.model.OrderLineItems;
 import store.orderservice.repository.OrderRepository;
 
 import org.springframework.transaction.annotation.Transactional;
+
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,6 +23,8 @@ public class OrderService {
 
     private final OrderRepository orderRepository;
 
+    private final WebClient webClient;
+
     public void placeOrder(OrderRequest orderRequest) {
         Order order = new Order();
         order.setOrderNumber(UUID.randomUUID().toString());
@@ -27,11 +32,34 @@ public class OrderService {
         List<OrderLineItems> orderLineItems = orderRequest.getOrderLineItemsDtoList()
                 .stream()
                 .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         order.setOrderLineItemsList(orderLineItems);
 
-        orderRepository.save(order);
+        // call inventory service to check if the items are in stock
+        List<String> skuCodes = order.getOrderLineItemsList().stream()
+                .map(OrderLineItems::getSkuCode)
+                .toList();
+
+        // CONVERT ARRAY RESPONSE TO ACTUAL DTO OBJECT
+        // Call Inventory Service, and place order if product is in stock
+        InventoryResponse[] inventoryResponsArray = webClient.get()
+                .uri("http://localhost:8083/api/inventory",
+                        uriBuilder -> uriBuilder.queryParam("skuCode", skuCodes).build())
+                .retrieve()
+                // bodyToMono() returns a Mono of the response body, and Mono is a reactive stream
+                .bodyToMono(InventoryResponse[].class)
+                // block() call explicitly holds the main thread until the publisher completes
+                .block();
+
+        boolean allProductsInStock = Arrays.stream(inventoryResponsArray)
+                .allMatch(InventoryResponse::isInStock);
+
+        if(allProductsInStock){
+            orderRepository.save(order);
+        } else {
+            throw new IllegalArgumentException("Product is not in stock, please try again later");
+        }
     }
 
     private OrderLineItems mapToDto(OrderLineItemsDto orderLineItemsDto) {
